--- a/adminkit-3-2-0/dynamic/css/style.css
+++ b/adminkit-3-2-0/dynamic/css/style.css
@@ -23,6 +23,14 @@
 
 #sidebar{
     height: 100%;
-    overflow-y: scroll;
+    
 }
 
+
+#Man{
+    display: none;
+}
+
+#audit_interne{
+    display: none;
+}
